[project]
name = "cyal"
version = "0.3.3"
authors = [
  { name="Michael Connor Buchan", email="mikey@blindcomputing.org" },
]
description = "Cython bindings for OpenAL"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["audio", "openal", "cython", "bindings"]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

[project.urls]
"Homepage" = "https://github.com/lower-elements/cyal#readme"
"Repository" = "https://github.com/lower-elements/cyal"
"Bug Tracker" = "https://github.com/lower-elements/cyal/issues"
"Contribute" = "https://github.com/lower-elements/cyal/pull/new"

[build-system]
requires = [
"scikit-build-core>=0.5.0",
"cython>=3.0.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.24"
ninja.minimum-version = "1.11"
cmake.build-type = "Release"
